[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperoni"
version = "0.3.0"
description = "Search for scientific papers"
authors = [
    { name = "Olivier Breuleux", email = "breuleux@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "ovld>=0.5.13",
    "serieux>=0.2.8",
    "gifnoc>=0.6.1",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.13.4",
    "blessed>=1.21.0",
    "requests>=2.32.3",
    "openreview-py>=1.50.0,<1.52.3",
    "requests-cache>=1.2.1",
    "lxml>=6.0.0",
    "unidecode>=1.4.0",
    "fake-useragent>=2.2.0",
    "cloudscraper>=1.2.71",
    "eventlet>=0.40.1",
    "outsight>=0.0.2",
    "rich>=14.1.0",
    "paperazzi[vertexai]>=0.0.7",
    "rapporteur>=0.1.1,<0.2.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/mila-iqia/paperoni"
Repository = "https://github.com/mila-iqia/paperoni"

[project.scripts]
paperoni = "paperoni.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "pytest-regressions>=2.7.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.3",
]

[project.entry-points."paperoni.discovery"]
semantic_scholar = "paperoni.discovery.semantic_scholar:SemanticScholar"
openreview = "paperoni.discovery.openreview:OpenReview"
openalex = "paperoni.discovery.openalex:OpenAlex"
miniconf = "paperoni.discovery.miniconf:MiniConf"
pmlr = "paperoni.discovery.pmlr:PMLR"
jmlr = "paperoni.discovery.jmlr:JMLR"
synth = "paperoni.discovery.synth:Synth"

[project.entry-points."outsight.fixtures"]
dash = "paperoni.dash:Dash"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E241", "F722", "E501", "E203", "F811", "F821", "E741"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
timeout = 20

[tool.hatch.envs.default.env-vars]
GIFNOC_FILE = "{env:GIFNOC_FILE:{root:real}/config/secrets.yaml}"
SERIEUX_PASSWORD = "{env:SERIEUX_PASSWORD:_}"
PAPERONI_SECRETS = "{env:PAPERONI_SECRETS:{home:real}/secrets/paperoni/config.yaml}"

[tool.hatch.envs.default.scripts]
sync = "uv sync --active --all-extras {args}"
make-secrets = "serieux patch -m 'paperoni.config:gifnoc_model' -f {env:PAPERONI_SECRETS} -o {env:GIFNOC_FILE} -p {env:SERIEUX_PASSWORD}"
