[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperoni"
version = "0.3.0"
description = "Search for scientific papers"
authors = [
    { name = "Olivier Breuleux", email = "breuleux@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "ovld>=0.5.13",
    "serieux>=0.3.9",
    "gifnoc>=0.6.2",
    "beautifulsoup4>=4.13.4",
    "blessed>=1.21.0",
    "requests>=2.32.3",
    "openreview-py>=1.50.0,<1.52.3",
    "requests-cache>=1.2.1",
    "lxml>=6.0.0",
    "unidecode>=1.4.0",
    "fake-useragent>=2.2.0",
    "cloudscraper>=1.2.71",
    "outsight>=0.0.2",
    "rich>=14.1.0",
    "paperazzi[vertexai]>=0.0.7",
    "rapporteur>=0.1.3,<0.2.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0,<0.39.0",
    "authlib>=1.6.4",
    "pymongo>=4.15.0",
    "motor>=3.7.1",
    "filelock>=3.20.0",
    "jinja2>=3.1.6",
    "easy-oauth",
    "markdown>=3.10",
    "httpx>=0.28.1",
    "hishel[httpx]>=1.1.8",
    "chardet>=5.2.0",
    "tenacity>=9.1.2",
    "hrepr>=0.9.1",
    "mailchimp-marketing>=3.0.80",
]

[project.urls]
Homepage = "https://github.com/mila-iqia/paperoni"
Repository = "https://github.com/mila-iqia/paperoni"

[project.scripts]
paperoni = "paperoni.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "pytest-regressions>=2.7.0",
    "pytest-timeout>=2.4.0",
    "python-multipart>=0.0.20",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "ruff>=0.15.0",
]

[project.entry-points."paperoni.discovery"]
semantic_scholar = "paperoni.discovery.semantic_scholar:SemanticScholar"
openreview = "paperoni.discovery.openreview:OpenReview"
openalex = "paperoni.discovery.openalex:OpenAlex"
miniconf = "paperoni.discovery.miniconf:MiniConf"
pmlr = "paperoni.discovery.pmlr:PMLR"
jmlr = "paperoni.discovery.jmlr:JMLR"
synth = "paperoni.discovery.synth:Synth"
scrape = "paperoni.discovery.scrape:Scrape"
v2 = "paperoni.discovery.paperoni_v2:PaperoniV2"

[project.entry-points."paperoni.web"]
restapi = "paperoni.web.restapi:install_api"
reports = "paperoni.web.reports:install_reports"
search = "paperoni.web.search:install_search"
edit = "paperoni.web.edit:install_edit"
focuses = "paperoni.web.focuses:install_focuses"
pages = "paperoni.web.pages:install_pages"
capabilities = "paperoni.web.capabilities:install_capabilities"
latest = "paperoni.misc.newsletter:install_latest"

[project.entry-points."outsight.fixtures"]
dash = "paperoni.dash:Dash"

[project.entry-points."serieux.default_features"]
exc = "paperoni.srx:ExceptionSerialization"

[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.sources]
easy-oauth = { git = "https://github.com/mila-iqia/easy-oauth", rev = "v0.0.3" }

[tool.ruff]
line-length = 90

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E241", "F722", "E501", "E203", "F811", "F821", "E741"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest]
timeout = "20"
asyncio_mode = "auto"
filterwarnings = [
    'ignore:.*_UnionGenericAlias.*:DeprecationWarning',
    'ignore:.*websockets.server.WebSocketServerProtocol is deprecated.*:DeprecationWarning',
    'ignore:.*websockets.legacy is deprecated.*:DeprecationWarning',
]

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = ["dev"]
post-install-commands = [
    "uv sync",
]

[tool.hatch.envs.default.env-vars]
GIFNOC_FILE = "{env:GIFNOC_FILE:{root:real}/config/secrets.yaml,{root:real}/config/site.yaml}"
SERIEUX_PASSWORD = "{env:SERIEUX_PASSWORD:_}"
PAPERONI_SECRETS = "{env:PAPERONI_SECRETS:{home:real}/secrets/paperoni/config.yaml}"

[tool.hatch.envs.default.scripts]
uv = 'UV_PROJECT_ENVIRONMENT="{env:VIRTUAL_ENV}" "$(which uv)" {args}'
make-secrets = [
    "uv sync",
    'serieux patch -m "paperoni.config:gifnoc_model" -f "{env:PAPERONI_SECRETS}" -o "$(echo "{env:GIFNOC_FILE}" | cut -d"," -f1)" {args}',
    'cp $(dirname "{env:PAPERONI_SECRETS}")/*focuses*.yaml "$(dirname "$(echo "{env:GIFNOC_FILE}" | cut -d"," -f1)")"',
]

[tool.hatch.envs.hatch-test]
installer = "uv"
dependency-groups = ["dev"]
post-install-commands = [
    "uv sync --inexact",
    "hatch run podman:install",
]

[tool.hatch.envs.hatch-test.extra-scripts]
uv = 'UV_PROJECT_ENVIRONMENT="{env:VIRTUAL_ENV}" "$(which uv)" {args}'
mongo = [
    "uv sync --inexact",
    "hatch run mongo:restart",
    "run {args}",
    "hatch run mongo:stop",
]

[tool.hatch.envs.lint]
installer = "uv"
detached = true
dependency-groups = ["lint"]

[tool.hatch.envs.lint.scripts]
uv = 'UV_PROJECT_ENVIRONMENT="{env:VIRTUAL_ENV}" "$(which uv)" {args}'
lint = [
    "uv sync --only-group lint",
    "ruff check --fix",
    "ruff format",
]

[tool.hatch.envs.pixi]
detached = true
installer = "uv"

[tool.hatch.envs.pixi.scripts]
install-linux = [
    """which pixi && exit 0 \
        || curl -fsSL https://pixi.sh/install.sh | sh"""
]
install-macos = [
   "install-linux"
]

[tool.hatch.envs.pixi.overrides]
platform.linux.scripts = [
  "install=install-linux",
]
platform.macos.scripts = [
  "install=install-macos",
]

[tool.hatch.envs.podman]
detached = true

[tool.hatch.envs.podman.env-vars]
PODMAN_VERSION = "{env:PODMAN_VERSION:5.6.1}"

[tool.hatch.envs.podman.scripts]
install-linux = [
    """which podman >/dev/null && exit 0 \
        || hatch run pixi:install-linux""",
    """which podman >/dev/null && exit 0 \
        || which pixi >/dev/null 2>&1 || echo 'Please restart or source your shell.' && which pixi >/dev/null 2>&1""",
    """which podman >/dev/null && exit 0 \
        || pixi global install -c conda-forge 'podman=={env:PODMAN_VERSION}'"""
]
install-macos = [
    """which podman >/dev/null && exit 0 \
        || curl -sL https://github.com/containers/podman/releases/download/v{env:PODMAN_VERSION}/podman-installer-macos-universal.pkg \
        -o /tmp/podman-installer-macos-universal.pkg""",
    """which podman >/dev/null && exit 0 \
        || sudo installer -pkg /tmp/podman-installer-macos-universal.pkg -target /""",
    "podman machine inspect >/dev/null 2>&1 || podman machine init",
]

[tool.hatch.envs.podman.overrides]
platform.linux.scripts = [
  "install=install-linux",
]
platform.macos.scripts = [
  "install=install-macos",
]

[tool.hatch.envs.mongo]
template = "podman"

[tool.hatch.envs.mongo.env-vars]
MONGO_INITDB_ROOT_USERNAME = "{env:MONGO_INITDB_ROOT_USERNAME:root}"
MONGO_INITDB_ROOT_PASSWORD = "{env:MONGO_INITDB_ROOT_PASSWORD:pass}"
MONGO_INITDB_PORT = "{env:MONGO_INITDB_PORT:27017}"
MONGOPOD_NAME = "{env:MONGOPOD_NAME:pap_mongopod_test}"

[tool.hatch.envs.mongo.scripts]
start = [
    "hatch run podman:install",
    "- podman machine inspect >/dev/null 2>&1 && podman machine start",
    "podman start {env:MONGOPOD_NAME} || podman run -dt --name {env:MONGOPOD_NAME} -p {env:MONGO_INITDB_PORT}:27017/tcp docker.io/library/mongo:noble",
    "echo 'MongoDB should now be available at mongodb://localhost:{env:MONGO_INITDB_PORT}'"
]
stop = [
    "podman stop {env:MONGOPOD_NAME}",
    # We do not need to keep test mongodb container
    "- podman rm pap_mongopod_test",
]
restart = [
    "- stop",
    "start",
]
